# esp32-driver-ide

./: .gitignore  .gitmodules  ADVANCED_FEATURES.md  AI_CODE_GENERATION.md  BUG_FIXES_SUMMARY.md  BUILD_GUIDE.md  CHANGELOG_DEVICE_EXPANSION.md  CMakeLists.txt  DECOMPILER_GUIDE.md  DECOMPILER_IMPLEMENTATION_SUMMARY.md  DEVICE_SUPPORT.md  ENHANCED_GUI_FEATURES.md  FEATURES.md  FEATURES_IMPLEMENTATION.md  FEATURE_UPDATE.md  FINAL_REPORT.txt  GUI_REPLACEMENT_SUMMARY.md  GuiExpert.agent.md  IMGUI_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_V2.md  IMPLEMENTATION_ML_DETECTION.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_FINAL.md  INTERFACE_IMPROVEMENTS.md  ML_DEVICE_DETECTION.md  NEW_FEATURES.md  README.md  README_CPP.md  ROADMAP.md  SECURITY_SUMMARY.md  TERMINAL_UI_MIGRATION.md  VERSION_COMPARISON.md  VM_EMULATOR.md  app.js  index.html  package.json  styles.css
.github/: gui_expert.agent.md
.github/agents/: my-agent.agent.md
.github/workflows/: summary.yml
_codeql_build_dir/: esp32-driver-ide-demo
build_test/: esp32-decompiler-test  esp32-driver-ide-demo  esp32-driver-ide-feature-test  esp32-ml-device-detection-test  esp32-vm-emulator-demo
screenshots/: README.md  demo_output.txt  enhanced_gui_output.txt  ml_detection_output.txt  vm_emulator_output.txt
src/: decompiler_test.cpp  demo.cpp  enhanced_gui_test.cpp  feature_test.cpp  gui_wired_framework_demo.cpp  gui_wired_framework_test.cpp  main.cpp  main_gui.cpp  ml_device_detection_test.cpp  vm_emulator_demo.cpp
src/ai_assistant/: ai_assistant.cpp  ai_assistant.h
src/backend/: backend_framework.cpp  backend_framework.h
src/blueprint/: blueprint_editor.cpp  blueprint_editor.h
src/collaboration/: collaboration.cpp  collaboration.h
src/compiler/: esp32_compiler.cpp  esp32_compiler.h
src/decompiler/: advanced_decompiler.cpp  advanced_decompiler.h
src/editor/: autocomplete_engine.cpp  autocomplete_engine.h  collaboration.cpp  collaboration.h  syntax_highlighter.cpp  syntax_highlighter.h  tab_manager.cpp  tab_manager.h  text_editor.cpp  text_editor.h
src/emulator/: vm_emulator.cpp  vm_emulator.h
src/file_manager/: file_manager.cpp  file_manager.h  file_tree.cpp  file_tree.h  project_templates.cpp  project_templates.h
src/gui/: blueprint_editor.cpp  blueprint_editor.h  console_widget.cpp  console_widget.h  device_library.cpp  device_library.h  enhanced_gui_window.cpp  enhanced_gui_window.h  gui_wired_framework.cpp  gui_wired_framework.h  imgui_window.cpp  imgui_window.h  integrated_terminal.cpp  integrated_terminal.h  main_window.cpp  main_window.h  panel_system.cpp  panel_system.h  simple_gui_window.cpp  simple_gui_window.h  terminal_window.cpp  terminal_window.h  widgets.cpp  widgets.h
src/platform/: platform_expansion.cpp  platform_expansion.h
src/plugins/: plugin_system.cpp  plugin_system.h
src/renderer/: pure_c_renderer.cpp  pure_c_renderer.h
src/scripting/: scripting_engine.cpp  scripting_engine.h
src/serial/: serial_monitor.cpp  serial_monitor.h
src/terminal/: terminal_main.cpp  terminal_mode.cpp  terminal_mode.h
src/testing/: test_framework.cpp  test_framework.h
src/utils/: ml_device_detector.cpp  ml_device_detector.h  pretrained_model.cpp  pretrained_model.h  string_utils.cpp  string_utils.h
src/visualization/: advanced_visualization.cpp  advanced_visualization.h
tests/: CMakeLists.txt  basic_tests.cpp  version_1_3_0_tests.cpp  version_2_0_0_tests.cpp  vm_emulator_tests.cpp
